--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "0.0.1",
   "devDependencies": {
     "@sveltejs/adapter-auto": "^3.0.0",
+    "@sveltejs/adapter-node": "^4.0.1",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
+    "@types/bun": "^1.0.5",
     "@types/eslint": "8.56.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "autoprefixer": "^10.4.16",
+    "echarts": "^5.4.3",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-svelte": "^2.35.1",
@@ -20,6 +23,7 @@
     "svelte": "^4.2.7",
     "svelte-adapter-bun": "^0.5.1",
     "svelte-check": "^3.6.0",
+    "svelte-echarts": "^0.1.1",
     "tailwindcss": "^3.3.6",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
@@ -38,8 +42,12 @@
   "type": "module",
   "dependencies": {
     "@observablehq/plot": "^0.6.13",
+    "@observablehq/runtime": "^5.9.7",
+    "@types/d3": "^7.4.3",
+    "arquero": "^5.4.0",
     "bits-ui": "^0.18.1",
     "clsx": "^2.1.0",
+    "d3": "^7.8.5",
     "layerchart": "^0.30.0",
     "lucide-svelte": "^0.330.0",
     "mode-watcher": "^0.2.1",
