--- a/package.json
+++ b/package.json
@@ -48,9 +48,12 @@
     "bits-ui": "^0.18.1",
     "clsx": "^2.1.0",
     "d3": "^7.8.5",
+    "duckdb": "^0.10.0",
+    "duckdb-async": "^0.10.0",
     "layerchart": "^0.30.0",
     "lucide-svelte": "^0.330.0",
     "mode-watcher": "^0.2.1",
+    "nodejs-polars": "^0.8.4",
     "radix-icons-svelte": "^1.2.1",
     "svelte-ux": "^0.60.1",
     "tailwind-merge": "^2.2.1",
