--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-svelte": "^2.35.1",
+    "flowbite-svelte-icons": "^2.0.0-next.1",
     "postcss": "^8.4.32",
     "postcss-load-config": "^5.0.2",
     "prettier": "^3.1.1",
@@ -41,18 +42,25 @@
   },
   "type": "module",
   "dependencies": {
+    "@observablehq/inputs": "^0.10.6",
     "@observablehq/plot": "^0.6.13",
     "@observablehq/runtime": "^5.9.7",
     "@types/d3": "^7.4.3",
+    "apache-arrow": "^15.0.0",
     "arquero": "^5.4.0",
+    "aws-sdk": "^2.1564.0",
     "bits-ui": "^0.18.1",
     "clsx": "^2.1.0",
     "d3": "^7.8.5",
     "duckdb": "^0.10.0",
     "duckdb-async": "^0.10.0",
+    "htl": "^0.3.1",
     "layerchart": "^0.30.0",
     "lucide-svelte": "^0.330.0",
+    "mapbox": "^1.0.0-beta10",
+    "mock-aws-s3": "^4.0.2",
     "mode-watcher": "^0.2.1",
+    "nock": "^13.5.3",
     "nodejs-polars": "^0.8.4",
     "radix-icons-svelte": "^1.2.1",
     "svelte-ux": "^0.60.1",
