--- a/package.json
+++ b/package.json
@@ -45,10 +45,12 @@
     "@observablehq/inputs": "^0.10.6",
     "@observablehq/plot": "^0.6.13",
     "@observablehq/runtime": "^5.9.7",
+    "@types/better-sqlite3": "^7.6.9",
     "@types/d3": "^7.4.3",
     "apache-arrow": "^15.0.0",
     "arquero": "^5.4.0",
     "aws-sdk": "^2.1564.0",
+    "better-sqlite3": "^9.4.3",
     "bits-ui": "^0.18.1",
     "clsx": "^2.1.0",
     "d3": "^7.8.5",
