--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "bits-ui": "^0.18.1",
     "clsx": "^2.1.0",
     "d3": "^7.8.5",
+    "debounce": "^2.0.0",
     "duckdb": "^0.10.0",
     "duckdb-async": "^0.10.0",
     "htl": "^0.3.1",
