--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "d3": "^7.8.5",
     "debounce": "^2.0.0",
     "htl": "^0.3.1",
+    "iconify-icon": "^2.0.0",
     "layerchart": "^0.30.0",
     "lucide-svelte": "^0.330.0",
     "mapbox": "^1.0.0-beta10",
